2019-11-05 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix segfault when parsing "∠∠"
	* Restrict the max number of displayed digits to 100000 when scientific notation is completely disabled
	* Recognize the unicode fraction slash (interpreted as division sign)

2019-11-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Automatic detection of unknown variable (if corresponding argument is set to undefined or zero) in functions
	* romberg() and montecarlo() functions for numerical integration
	* root(x, a)*abs(x)^((a-1)/a)=x
	* Use ln(abs(x)) instead of ln(x^2)/2 (in integral)
	* Move integrate() variable argument from 2nd to 4th position

2019-10-31 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Much improved numerical integration (using Romberg's method)
	* integrate() argument which force numerical integration only
	* Calculator::clearMessages()

2019-10-28 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Depth of field (dof) function

2019-10-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix numerical integration error calculation

2019-10-26 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* expondist(), binomdist(), randpoisson(), randrayleigh(), and randexp() functions

2019-10-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add argument specifying number of values in random number functions
	* randnorm(), randuniform(), and normdist() functions

2019-10-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix integral of a^(b*x^c)

2019-10-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Allow angle argument in cis()
	* Fix complex exponential form when default angle unit is not radians
	* Complex cis form
	* Complex angle/phasor notation (input and output)

2019-10-16 Hanna Knutsson <hanna.knutsson@protonmail.com>
	
	* Option to use "j" as default symbol for the imaginary unit in qalc

2019-10-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix definite integral of abs(cos(x)) and similar